# finite_fields

./: .gitignore  CMakeLists.txt  README.md  elliptic_curve.hpp  field.hpp  main.cpp  number_theory.hpp  prime_field.hpp  random.hpp  rational_field.hpp  timing.hpp
base/: error.hpp  fraction.hpp  number_theory.hpp  polynomial.hpp  timing.hpp
